@@ -41,3 +41,4 @@
 - document all/account changes and update example configs
 - document new-only/old-only for POP3 and IMAP
 - document pop3 over pipe
+- document regexp changes/case keyword
